crates/ruff_python_parser/tests/snapshots/invalid_syntax@invalid_string_literal.py.snap
---
source: crates/ruff_python_parser/tests/fixtures.rs
input_file: crates/ruff_python_parser/resources/inline/err/invalid_string_literal.py
---
## AST

```
Module(
    ModModule {
        range: 0..56,
        body: [
            Expr(
                StmtExpr {
                    range: 0..25,
                    value: StringLiteral(
                        ExprStringLiteral {
                            range: 0..25,
                            value: StringLiteralValue {
                                inner: SinglePart(
                                    StringLiteral {
                                        range: 0..25,
                                        value: "",
                                        flags: StringLiteralFlags {
                                            quote_style: Single,
                                            prefix: Empty,
                                            triple_quoted: false,
                                        },
                                    },
                                ),
                            },
                        },
                    ),
                },
            ),
            Expr(
                StmtExpr {
                    range: 26..55,
                    value: StringLiteral(
                        ExprStringLiteral {
                            range: 26..55,
                            value: StringLiteralValue {
                                inner: SinglePart(
                                    StringLiteral {
                                        range: 26..55,
                                        value: "",
                                        flags: StringLiteralFlags {
                                            quote_style: Double,
                                            prefix: Empty,
                                            triple_quoted: true,
                                        },
                                    },
                                ),
                            },
                        },
                    ),
                },
            ),
        ],
    },
)
```
## Errors

  |
1 | 'hello \N{INVALID} world'
  |           ^^^^^^^ Syntax Error: Got unexpected unicode
2 | """hello \N{INVALID} world"""
  |


  |
1 | 'hello \N{INVALID} world'
2 | """hello \N{INVALID} world"""
  |             ^^^^^^^ Syntax Error: Got unexpected unicode
  |
